<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Earsy</string>
    <string name="action_settings">Quiz Settings</string>
    <string name="main_btnStartTraining">Quiz Me</string>
    <string name="logo_content">earsy logo</string>
    <string name="title_activity_pitch_test">Perfect Pitch Quiz</string>
    <string name="title_activity_results">Quiz Results</string>
    <string name="banner_text">Perfect Pitch Training</string>
    <string name="pitch_test_instruc">Press Play then Touch piano key to guess pitch</string>
    <string name="play_btnContent">plays audio for user</string>
    <string name="correct_answer">Correct! You got it right.</string>
    <string name="wrong_answer">Sorry, Wrong Answer!</string>
    <string name="result">Result</string>
    <string name="quit">Quit</string>
    <string name="go_back_to_home">Return to Main Screen</string>
    <string name="press_play_first">You must first tap play button at the top of the screen to enable piano for guessing the note you hear.</string>
    <string name="quit_return_home">Quit And Return to Home Screen</string>
    <string name="button_help_text">Help</string>
    <string name="button_back_text">Back</string>
    <string name="instructions">Welcome to Earsy! This simple perfect pitch training app trains you to recognize pitch through repetitive quizzes.
        You can customize the pitch quiz by tapping on the button (with 3 vertical dots) in the top right-hand corner of the action bar which will choose settings.  Available 
        options include selection of up to 3 octave(s), 12 notes each, to be tested on in the quiz, the ability to keep guessing the pitch until correct, and the ability 
        to have the piano key play the note you guess when pressed. Once you choose desired settings and are ready to take a quiz, click the Quiz Me button on the main screen. </string>
    <string name="pref_guess">Guess Options</string>
    <string name="pref_guess_summary">Tap to change guess options for quiz</string>
    <string name="pref_play_key_guess_title">Play Note on Guess</string>
    <string name="pref_play_key_guess_summary">Check to play the note upon guess</string>
    <string name="pref_bass_octave_title">Include bass octave</string>
    <string name="pref_bass_octave_summary">Check to include octave below middle octave</string>
    <string name="pref_middle_octave_title">Include middle octave</string>
    <string name="pref_middle_octave_summary">Check to include octave starting at Middle C</string>
    <string name="pref_treble_octave_title">Include treble octave</string>
    <string name="pref_treble_octave_summary">Check to include octave above middle octave</string>
    <string name="title_section3">Section 3</string>
    <string name="keybutton_c_txt">C</string>
    <string name="keybutton_csdb_txt">C# Db</string>
    <string name="keybutton_d_txt">D</string>
    <string name="keybutton_dseb_txt">D# Eb</string>
    <string name="keybutton_e_txt">E</string>
    <string name="keybutton_f_txt">F</string>
    <string name="keybutton_fsgb_txt">F# Gb</string>
    <string name="keybutton_g_txt">G</string>
    <string name="keybutton_gsab_txt">G# Ab</string>
    <string name="keybutton_a_txt">A</string>
    <string name="keybutton_asbb_txt">A# Bb</string>
    <string name="keybutton_b_txt">B</string>
    

</resources>
