<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
            android:key="prefGuessOptions"
            android:entries="@array/prefGuessOptions"
            android:summary="@string/pref_guess_summary"
            android:entryValues="@array/prefGuessOptionsValues"
            android:defaultValue="0"
            android:title="@string/pref_guess" />
    <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefBassOctave"
            android:summary="@string/pref_bass_octave_summary"
            android:title="@string/pref_bass_octave_title"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefMiddleOctave"
            android:summary="@string/pref_middle_octave_summary"
            android:title="@string/pref_middle_octave_title"/>
    <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefTrebleOctave"
            android:summary="@string/pref_treble_octave_summary"
            android:title="@string/pref_treble_octave_title"/>     		
</PreferenceScreen>